Fix emoji alignment

--- a/static/css/blog-page-style.css
+++ b/static/css/blog-page-style.css
@@ -8,9 +8,13 @@ mark {
 
 .emoji {
   display: inline-block;
+
   height: 1em;
   width: 1em;
+
   margin: 0;
+
+  vertical-align: middle;
 }
 
 pre.shiki {
